Add GitHub link to enclosures page

--- a/enclosures.html
+++ b/enclosures.html
@@ -105,7 +105,7 @@
 </ul>
 <!-- /TOC -->
 
-<p>During the latter stages of the project my colleague Jason Too undertook some initial work to investigate the design of enclosures for our electronic modules, provide design files at handover to the Majico team. These files are available for download <a href="/resources/majico_solar_valve_enclosures.zip">here</a>, and are also available on GitHub.</p>
+<p>During the latter stages of the project my colleague Jason Too undertook some initial work to investigate the design of enclosures for our electronic modules, and provide design files at handover to the Majico team. These files are available for download <a href="/resources/majico_solar_valve_enclosures.zip">here</a>, and are also available on <a href="https://github.com/valveteam/enclosures">GitHub</a>.</p>
 <h2 id="main-enclosure">Main Enclosure</h2>
 <p>The main enclosure is essentially a box, and this can be built to enclose both the control and flow modules together. A picture of the manufactured box is below.</p>
 <p><img src="https://raw.githubusercontent.com/valveteam/documentation/master/overall/system_enclosures_res/control%20flow%20enclosure.jpg" alt="Main Enclosure"></p>
