--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     </div>
 </div>
 
-
-    <div class="banner normal normal">
-        <img src="images/valve_test.png" alt="Solar Valve Testing">
-    </div>
-
+<div class="banner video">
+    <video autoplay muted>
+        <source src="/resources/film.mp4" type="video/mp4">
+    </video>
+</div>
 
 <div class="grid-container">
     <div class="grid-x grid-margin-x add-spacing">
