--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header class="main">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
-            <div class="cell small-4">
+            <div class="cell medium-3">
                 <a href="/" class="logo">
     <span class="valve">valve</span><span class="team">team</span>
 </a>
@@ -83,7 +83,7 @@
 </div>
 
 <div class="banner video">
-    <video autoplay muted>
+    <video autoplay muted loop>
         <source src="/resources/film.mp4" type="video/mp4">
     </video>
 </div>
