--- a/principles.html
+++ b/principles.html
@@ -32,7 +32,7 @@
   <header class="main">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
-            <div class="cell small-4">
+            <div class="cell medium-3">
                 <a href="/" class="logo">
     <span class="valve">valve</span><span class="team">team</span>
 </a>
