Fix principles for digital development

--- a/principles.html
+++ b/principles.html
@@ -99,11 +99,11 @@
            <p class="updated">Last Updated June 7th 2018</p>
         </div>
       
-        <h1 id="principles-of-digital-development">Principles of Digital Development</h1>
+        <h1 id="principles-for-digital-development">Principles for Digital Development</h1>
 <!-- TOC -->
 
 <ul>
-<li><a href="#principles-of-digital-development">Principles of Digital Development</a><ul>
+<li><a href="#principles-for-digital-development">Principles for Digital Development</a><ul>
 <li><a href="#introduction">Introduction</a></li>
 <li><a href="#design-with-the-user">Design With The User</a></li>
 <li><a href="#understand-the-ecosystem">Understand the Ecosystem</a></li>
